# tiago_social_robot_sim

./: .gitignore  README.md  tiago_experiments-melodic.rosinstall  tiago_public-melodic.repos  tiago_public-melodic.rosinstall
docker/: Dockerfile  README.md  docker_build.sh  docker_reinstall.sh  docker_run.sh  nvidia_toolkit_install.sh  rocker_run.sh
tiago_social_bringup_sim/: CMakeLists.txt  README.md  package.xml
tiago_social_bringup_sim/launch/: gazebo_sim.launch  gazebo_sim_and_nav.launch  gazebo_spawn.launch
tiago_social_experiments_sim/: CMakeLists.txt  README.md  package.xml
tiago_social_experiments_sim/config/: 012_goal.yaml  012_goal_static.yaml  012_pose_full.yaml  012_pose_hard.yaml  012_pose_short.yaml  012_pose_static.yaml  012_pose_undock.yaml  012_static_finish_pose.yaml  012_static_start_amcl.yaml
tiago_social_experiments_sim/config/012/: dock_amcl.yaml  dock_amcl_map_ideal.yaml  docked_ftl_amcl.yaml  docked_ftl_amcl_map_ideal.yaml  docked_ftl_pose.yaml  docked_ftl_pose_map_ideal.yaml  undock_amcl.yaml  undock_amcl_map_ideal.yaml  undock_ftl_amcl.yaml  undock_ftl_amcl_map_ideal.yaml  undock_ftl_pose.yaml  undock_ftl_pose_map_ideal.yaml  undock_pose.yaml  undock_pose_map_ideal.yaml
tiago_social_experiments_sim/config/012/crossing/: start_amcl.yaml  start_amcl_map_ideal.yaml  start_pose.yaml  start_pose_map_ideal.yaml
tiago_social_experiments_sim/config/012/dynamic/: finish_pose_map_ideal.yaml
tiago_social_experiments_sim/config/012/full/: start_amcl.yaml  start_amcl_map_ideal.yaml
tiago_social_experiments_sim/config/012/hall_passing_group/: finish_amcl.yaml  finish_amcl_map_ideal.yaml  finish_pose.yaml  finish_pose_map_ideal.yaml  start_amcl.yaml  start_amcl_map_ideal.yaml  start_pose.yaml  start_pose_map_ideal.yaml
tiago_social_experiments_sim/config/012/hard/: finish_pose.yaml  start_amcl_map_ideal.yaml
tiago_social_experiments_sim/config/012/overtaking/: finish_amcl.yaml  finish_amcl_map_ideal.yaml  finish_pose.yaml  finish_pose_map_ideal.yaml  start_amcl.yaml  start_amcl_map_ideal.yaml  start_pose.yaml  start_pose_map_ideal.yaml
tiago_social_experiments_sim/config/012/passing_in_front/: finish_amcl.yaml  finish_amcl_map_ideal.yaml  finish_pose.yaml  finish_pose_map_ideal.yaml  start_amcl.yaml  start_amcl_map_ideal.yaml  start_pose.yaml  start_pose_map_ideal.yaml
tiago_social_experiments_sim/config/012/short/: finish_pose_map_ideal.yaml  start_amcl.yaml  start_amcl_map_ideal.yaml
tiago_social_experiments_sim/config/012/static/: finish_pose.yaml  finish_pose_map_ideal.yaml  start_amcl_map_ideal.yaml
tiago_social_experiments_sim/config/aws_hospital/: README.md
tiago_social_experiments_sim/config/aws_hospital/crowd_avoidance/: finish_pose.yaml  start_amcl.yaml  start_pose.yaml
tiago_social_experiments_sim/config/aws_hospital/normal/: finish_pose.yaml  start_amcl.yaml
tiago_social_experiments_sim/config/aws_hospital/wall_avoidance/: finish_pose.yaml  start_amcl.yaml  start_pose.yaml
tiago_social_experiments_sim/launch/: 012.launch  aws_hospital.launch  scenario_base.launch
tiago_social_experiments_sim/scripts/: README.md  run_sim_experiment.py  sim_experiments_launcher.sh  transform_pose_map.py
tiago_social_scenarios_sim/: CMakeLists.txt  README.md  package.xml
tiago_social_scenarios_sim/include/tiago_social_scenarios_sim/: utils.h
tiago_social_scenarios_sim/src/: aws_hospital_hubero.cpp  aws_hospital_normal_hubero.cpp  lab_012_crossing_hubero.cpp  lab_012_dynamic_hubero.cpp  lab_012_hubero.cpp  lab_012_overtaking_hubero.cpp  lab_012_passing_in_front_hubero.cpp  utils.cpp
