<?xml version="1.0"?>
<package format="2">
  <name>tiago_social_bringup_sim</name>
  <version>0.0.0</version>
  <description>The tiago_social_bringup_sim package</description>
  <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
  <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
  <license>BSD-3</license>
  <url type="website">https://github.com/rayvburn/tiago_social_robot_sim</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>image_proc</exec_depend>
  <exec_depend>pal_navigation_sm</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>tiago_gazebo</exec_depend>
  <exec_depend>tiago_laser_sensors</exec_depend>
  <exec_depend>tiago_gazebo</exec_depend>

  <!-- only for non-`public_sim` -->
  <!--
  <exec_depend>pal_loc_measure</exec_depend>
  <exec_depend>pal_pcl_points_throttle_and_filter</exec_depend>
  -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
